src/objects/X3_0_Top_GAPs__c.object
<CustomObject>
    <fields>
        <fullName>Call_center__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Call center</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ckw_group_meetings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ckw group meetings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ckw_searches__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ckw searches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crop__c</fullName>
        <label>Crop</label>
        <picklist>
            <picklistValues>
                <fullName>Banana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maize</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Farmer_group_meetings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Farmer group meetings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GAP__c</fullName>
        <label>GAP</label>
        <picklist>
            <picklistValues>
                <fullName>Banana GAP1: Soil Fertility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana GAP2: Desuckering, Pruning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana GAP3: Soil and Water Conservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana GAP4: Support for Banana Plants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana GAP5: Record Keeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana GAP6: Group Production, Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana GAP7: Weed Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana GAP8: Pests and Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana GAP9: Value Addition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana GAP10: Agro-inputs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee GAP1: Soil Fertility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee GAP2: Desuckering, Pruning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee GAP3: Soil and Water Conservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee GAP4: Value Addition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee GAP5: Record Keeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee GAP6: Group Production/ Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee GAP7: Weed Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee GAP8: Pests and Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee GAP9: Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee GAP10: Agro-inputs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maize GAP1: Land Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maize GAP2: Proper Planting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maize GAP3: Seed Selection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maize GAP4: Soil Fertility Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maize GAP5: Pest and Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maize GAP6: Harvesting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maize GAP7: Bulking Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maize GAP8: Record Keeping</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SMS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_discussions__c</fullName>
        <formula>Call_center__c + Ckw_group_meetings__c + Ckw_searches__c + Farmer_group_meetings__c + SMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total discussions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>3.0 Top GAPs</label>
    <nameField>
        <label>3.0 Top GAPs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>3.0 Top GAPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>